--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
   <script src="lib/jquery/dist/jquery.js"></script>
   <script src="lib/react/react.js"></script>
   <script src="lib/react/react-dom.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 </head>
 <body>
   <div id="app"></div>
